--- a/requirements-freeze.txt
+++ b/requirements-freeze.txt
@@ -1,61 +1,68 @@
-attrs==19.1.0
-backcall==0.1.0
-bleach==3.1.0
-certifi==2019.3.9
+absl-py==0.7.1
+appdirs==1.4.3
+astor==0.8.0
+beets==1.4.7
+btrfsutil==1.1.0
+CacheControl==0.12.5
 chardet==3.0.4
 colorama==0.4.1
-decorator==4.4.0
-defusedxml==0.6.0
-entrypoints==0.3
-gitdb2==2.0.5
-GitPython==2.1.11
-hmmlearn==0.2.2
+distlib==0.2.8
+distro==1.4.0
+docutils==0.14
+eyeD3==0.8
+gast==0.2.2
+grpcio==1.21.1
+h5py==2.9.0
+html5lib==1.0.1
 idna==2.8
-ipykernel==5.1.1
-ipython==7.5.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jedi==0.13.3
-Jinja2==2.10.1
-joblib==0.13.2
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-MarkupSafe==1.1.1
-mistune==0.8.4
-nbconvert==5.5.0
-nbdime==1.0.6
-nbformat==4.4.0
-nbstripout==0.3.5
-notebook==5.7.8
+iotop==0.6
+isc==2.0
+jellyfish==0.7.1
+Keras==2.2.4
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+lensfun==0.3.2
+lit==0.7.1.dev0
+lockfile==0.12.2
+louis==3.8.0
+Markdown==3.1.1
+Mimeo==2018.12.24.18.58.47
+mock==3.0.5
+msgpack==0.6.1
+munkres==1.0.12
+musicbrainzngs==0.6
+mutagen==1.42.0
+notmuch==0.28
 numpy==1.16.4
-pandas==0.24.2
-pandocfilters==1.4.2
-parso==0.4.0
-pexpect==4.7.0
-pickleshare==0.7.5
-prometheus-client==0.7.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
-Pygments==2.4.2
-pyrsistent==0.15.2
+packaging==19.0
+pep517==0.5.0
+pikaur==1.3.4
+progress==1.4
+protobuf==3.8.0
+pyalpm==0.8.5
+pyparsing==2.3.1
+PyQt5==5.12
+PyQt5-sip==4.19.14
 python-dateutil==2.8.0
-pytz==2019.1
-pyzmq==18.0.1
-qtconsole==4.5.1
-requests==2.22.0
-scikit-learn==0.21.2
+python-distutils-extra==2.39
+python-xlib==0.24
+pytoml==0.1.20
+pyxdg==0.26
+PyYAML==3.13
+requests==2.21.0
+retrying==1.3.3
+s3cmd==2.0.2
 scipy==1.3.0
-Send2Trash==1.5.0
+sip==4.19.14
 six==1.12.0
-smmap2==2.0.5
-terminado==0.8.2
-testpath==0.4.2
-tornado==6.0.2
-traitlets==4.3.2
-urllib3==1.25.3
-wcwidth==0.1.7
+smbus==1.1
+syslogng==1.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+Unidecode==1.0.23
+urllib3==1.24.1
+virtualenv==16.0.0
 webencodings==0.5.1
-widgetsnbextension==3.4.2
+Werkzeug==0.15.4
